Use Roboto font

--- a/lib/travel_journal_web/components/layouts/app.html.heex
+++ b/lib/travel_journal_web/components/layouts/app.html.heex
@@ -1,6 +1,6 @@
 <header class="bg-red-500 text-white p-4 font-extrabold flex flex-row justify-center items-center gap-2">
   <a class="flex flex-row justify-center items-center gap-2" href="/">
-    <Heroicons.icon name="globe-americas" type="outline" class="h-8 w-8" />
+    <.icon name="hero-globe-americas" class="h-8 w-8" />
     <h1>My Travel Journal.</h1>
   </a>
 </header>
