Add image URL to entry schema

--- a/lib/travel_journal_web/live/entry_live/show.html.heex
+++ b/lib/travel_journal_web/live/entry_live/show.html.heex
@@ -15,6 +15,7 @@
   <:item title="Desc">{@entry.desc}</:item>
   <:item title="Country">{@entry.country}</:item>
   <:item title="Location">{@entry.location}</:item>
+  <:item title="Image URL">{@entry.image}</:item>
 </.list>
 
 <.back navigate={~p"/entries"}>Back to entries</.back>
