--- a/lib/travel_journal_web/components/layouts/app.html.heex
+++ b/lib/travel_journal_web/components/layouts/app.html.heex
@@ -4,9 +4,7 @@
     <h1>My Travel Journal.</h1>
   </a>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-4xl">
-    <.flash_group flash={@flash} />
-    {@inner_content}
-  </div>
+<main class="">
+  <.flash_group flash={@flash} />
+  {@inner_content}
 </main>
