Fix layouts (they're tricky)

--- a/lib/travel_journal_web/components/layouts/liveview.html.heex
+++ b/lib/travel_journal_web/components/layouts/liveview.html.heex
@@ -4,7 +4,9 @@
     <h1>My Travel Journal.</h1>
   </a>
 </header>
-<main>
-  <.flash_group flash={@flash} />
-  {@inner_content}
+<main class="flex flex-col gap-4 items-center pt-4 font-mono">
+  <div class="max-w-7xl">
+    <.flash_group flash={@flash} />
+    {@inner_content}
+  </div>
 </main>
